<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/logo"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:paddingBottom="32dp" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText_companyId"
            android:hint="@string/hint_companyId"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editText_configId"
            android:hint="@string/hint_configId"
            android:gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_useRemoteValues"
            android:id="@+id/checkBox_useRemoteValues"
            android:layout_gravity="center_horizontal"
            android:checked="true" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_consent_flow"
            android:id="@+id/btn_consent_flow"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_manage_preferences"
            android:id="@+id/btn_manage_preferences"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_preferences"
            android:id="@+id/btn_get_preferences"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_sdk"
            android:id="@+id/btn_reset_sdk"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_reset_app"
            android:id="@+id/btn_reset_app"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_close_app"
            android:id="@+id/btn_close_app"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>

